--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:force": "ESLINT_NO_DEV_ERRORS=true next build",
     "start": "next start",
     "lint": "next lint"
   },
